--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": ">=7.4",
-        "typo3/cms-core": "^9.5 || ^10.4 || ^11.5",
+        "typo3/cms-core": "^10.4 || ^11.5",
         "b13/container": "^1"
     },
     "autoload": {
