--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "typo3/cms-core": "^10.4 || ^11.5",
-        "b13/container": "^1"
+        "b13/container": "^1 || ^2"
     },
     "autoload": {
         "psr-4": {
