--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     ],
     "require": {
         "typo3/cms-core": "^10.4 || ^11.5",
-        "b13/container": "^1 || ^2"
+        "b13/container": "^1 || ^2",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
