--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^10.4 || ^11.5",
+        "typo3/cms-core": "^10.4 || ^11.5 || ^12.0",
         "b13/container": "^1 || ^2",
         "ext-json": "*"
     },
